force-app/main/default/objects/Etablissement__c/Etablissement__c.object-meta.xml
<CustomObject>
    <label>Etablissement</label>
    <nameField>
        <label>Nom de Etablissement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etablissement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>