force-app/main/default/objects/Etablissement__c/fields/Code_D_partement__c.field-meta.xml
<CustomField>
    <fullName>Code_D_partement__c</fullName>
    <label>Code Département</label>
    <length>6</length>
    <type>Text</type>
</CustomField>