force-app/main/default/objects/Etablissement__c/fields/Code_Etablissement__c.field-meta.xml
<CustomField>
    <fullName>Code_Etablissement__c</fullName>
    <externalId>true</externalId>
    <label>Code Etablissement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>