force-app/main/default/objects/Etablissement__c/fields/Ville_Etablissement__c.field-meta.xml
<CustomField>
    <fullName>Ville_Etablissement__c</fullName>
    <label>Ville Etablissement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>